--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "numpy>=2.1.3",
     "pillow>=11.0.0",
+    "pyopengl>=3.1.7",
     "pyside6>=6.8.0.2",
     "vispy>=0.14.3",
 ]
