--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,5 @@ dependencies = [
     "numpy>=2.1.3",
     "pillow>=11.0.0",
     "pyopengl>=3.1.7",
-    "pyside6>=6.8.0.2",
-    "vispy>=0.14.3",
+    "vispy[pyside6]>=0.14.3",
 ]
